--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "outDir": "dist",
     "baseUrl": "."
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/*.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 } 
