--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convex-panel",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "description": "A React component for monitoring and debugging Convex applications",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -28,7 +28,8 @@
     "dev": "npm run copy-src && rollup -c -w",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node scripts/setup-convex.js"
   },
   "keywords": [
     "convex",
