--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "dev": "npm run copy-src && rollup -c -w",
     "clean": "rimraf dist",
     "prepublishOnly": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "node scripts/setup-convex.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "convex",
