--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
   "bugs": {
     "url": "https://github.com/robertalv/convex-panel/issues"
   },
-  "homepage": "https://github.com/robertalv/convex-panel#readme"
+  "homepage": "https://convex-panel.devwithbobby.com"
 }
