--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convex-panel",
-  "version": "0.1.33",
+  "version": "0.1.34",
   "description": "A React component for monitoring and debugging Convex applications",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -54,10 +54,10 @@
     "recharts": "^2.15.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "^11.1.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-url": "^8.0.2",
     "@types/debounce": "^1.2.1",
     "@types/node": "^22.13.10",
@@ -73,7 +73,8 @@
     "rollup": "^3.29.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-url": "^3.0.1",
-    "typescript": "^5.2.2"
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.2"
   },
   "repository": {
     "type": "git",
@@ -82,5 +83,5 @@
   "bugs": {
     "url": "https://github.com/robertalv/convex-panel/issues"
   },
-  "homepage": "https://convex-panel.devwithbobby.com"
+  "homepage": "https://convexpanel.dev"
 }
