--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "declaration": true,
     "declarationDir": "dist",
     "outDir": "dist",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types": ["framer-motion", "node"]
   },
   "include": ["src/**/*", "src/types/*.d.ts"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
