--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convex-panel",
-  "version": "0.1.41",
+  "version": "0.1.44",
   "description": "A React component for monitoring and debugging Convex applications",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
@@ -46,7 +46,11 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
+    "@types/react-window": "^1.8.8",
     "@types/recharts": "^1.8.29",
+    "@uiw/codemirror-theme-vscode": "^4.23.10",
+    "@uiw/react-codemirror": "^4.23.10",
     "debounce": "^1.2.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.479.0",
