--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,16 @@
     "declarationDir": "dist",
     "outDir": "dist",
     "baseUrl": ".",
-    "types": ["framer-motion", "node"]
+    "types": ["node"],
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
-  "include": ["src/**/*", "src/types/*.d.ts"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/types/**/*.d.ts"
+  ],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
 } 
