--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "panel",
     "monitoring"
   ],
-  "author": "Robert ALvarez",
+  "author": "Robert Alvarez",
   "license": "MIT",
   "peerDependencies": {
     "convex": ">=0.9.0",
@@ -46,11 +46,11 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
-    "@codemirror/lang-json": "^6.0.1",
+    "@monaco-editor/react": "^4.7.0",
     "@types/react-window": "^1.8.8",
     "@types/recharts": "^1.8.29",
-    "@uiw/codemirror-theme-vscode": "^4.23.10",
-    "@uiw/react-codemirror": "^4.23.10",
+    "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "debounce": "^1.2.1",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.479.0",
