--- a/package.json
+++ b/package.json
@@ -47,15 +47,17 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
-    "@types/react-window": "^1.8.8",
     "@types/recharts": "^1.8.29",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "debounce": "^1.2.1",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^12.5.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
+    "react-use": "^17.6.0",
     "react-window": "^1.8.11",
-    "recharts": "^2.15.1"
+    "recharts": "^2.15.1",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.8",
@@ -68,8 +70,9 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-window": "^1.8.8",
-    "convex": "^1.0.0",
+    "convex": "^1.21.0",
     "copyfiles": "^2.4.1",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
