--- a/package.json
+++ b/package.json
@@ -88,7 +88,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/robertalv/convex-panel.git"
+    "url": "https://github.com/robertalv/convex-panel.git"
+  },
+  "publishConfig": {
+    "@devwithbobby:registry": "https://npm.pkg.github.com"
   },
   "bugs": {
     "url": "https://github.com/robertalv/convex-panel/issues"
