--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "react-dom": ">=16.8.0"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.3.1",
     "@monaco-editor/react": "^4.6.0",
-    "monaco-editor": "^0.45.0",
     "@types/recharts": "^1.8.29",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
@@ -57,6 +57,7 @@
     "framer-motion": "^12.5.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
+    "monaco-editor": "^0.45.0",
     "react-use": "^17.6.0",
     "react-window": "^1.8.11",
     "recharts": "^2.15.1",
