--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,5 @@
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 @robertalv:registry=https://npm.pkg.github.com/
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN} 
+registry=https://registry.npmjs.org/
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
+always-auth=true 
