--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "monaco-editor": "^0.45.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-use": "^17.6.0",
     "react-window": "^1.8.11",
     "recharts": "^2.15.1",
