--- a/package.json
+++ b/package.json
@@ -42,27 +42,31 @@
   "author": "Robert Alvarez",
   "license": "MIT",
   "peerDependencies": {
-    "convex": ">=0.9.0",
-    "next": ">=13.0.0",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "convex": ">=1.25.4",
+    "next": ">=15.1.0",
+    "react": ">=19.1.0",
+    "react-dom": ">=19.1.0"
   },
   "dependencies": {
+    "@convex-dev/auth": "^0.0.87",
     "@emotion/is-prop-valid": "^1.3.1",
-    "@monaco-editor/react": "^4.6.0",
+    "@monaco-editor/react": "^4.7.0",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/recharts": "^1.8.29",
+    "@vitejs/plugin-react": "^4.7.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "debounce": "^1.2.1",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.23.6",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "monaco-editor": "^0.45.0",
-    "react-hotkeys-hook": "^4.6.1",
+    "react-hotkeys-hook": "^4.6.2",
     "react-use": "^17.6.0",
     "react-window": "^1.8.11",
-    "recharts": "^2.15.1",
-    "swr": "^2.3.3"
+    "recharts": "^2.15.4",
+    "swr": "^2.3.4",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.8",
@@ -70,23 +74,23 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@rollup/plugin-url": "^8.0.2",
-    "@types/debounce": "^1.2.1",
-    "@types/node": "^22.13.10",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
+    "@types/debounce": "^1.2.4",
+    "@types/node": "^22.16.5",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-window": "^1.8.8",
-    "convex": "^1.21.0",
+    "convex": "^1.25.4",
     "copyfiles": "^2.4.1",
     "monaco-editor-webpack-plugin": "^7.1.0",
-    "next": "^13.4.19",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.29.1",
+    "next": "^15.4.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "rimraf": "^5.0.10",
+    "rollup": "^3.29.5",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-url": "^3.0.1",
     "tslib": "^2.8.1",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.3"
   },
   "repository": {
     "type": "git",
