--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
+# //npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
 @robertalv:registry=https://npm.pkg.github.com/
 registry=https://registry.npmjs.org/
 always-auth=true
